# Pokemon

./: .gitignore  Actions.cpp  Actions.h  AnimatedSprite.cpp  AnimatedSprite.h  Battle.cpp  Battle.h  BattleUIStates.cpp  BattleUIStates.h  CMakeLists.txt  CollisionMap.cpp  CollisionMap.h  Dice.cpp  Dice.h  Game.cpp  Game.h  GameState.cpp  GameState.h  Map.cpp  Map.h  Move.cpp  Move.h  NPC.cpp  NPC.h  Player.cpp  Player.h  Pokemon.cpp  Pokemon.h  README.md  State.cpp  State.h  StateBattle.cpp  StateBattle.h  StateMainMenu.cpp  StateMainMenu.h  StateMap.cpp  StateMap.h  StatePauseMenu.cpp  StatePauseMenu.h  StatePokemonCenter.cpp  (+12 more)
Google_tests/: CMakeLists.txt  main.cpp  test1.cpp  tools.h
Maps/: Sample.txt  collisionMap.txt  collisionMap2.txt  foglio1.txt  foglio2.txt  prova.txt  prova2.txt
Maps/POKEMONCENTER/: pokemoncenter.txt
Maps/POKEMON_CENTER/: npclist.txt
Maps/ROUTE01/: npclist.txt
Maps/ROUTE_01/: npclist.txt  route_01.txt
Pokemons/: Blastoise.txt  Charizard.txt  Charmander.txt  Gengar.txt  Pikachu.txt  Salamence.txt  Shelgon.txt  Squirtle.txt  Umbreon.txt  Vileplume.txt  Zangoose.txt
Pokemons/Moves/: brave_bird.txt  dark_pulse.txt  draco_meteor.txt  flamethrower.txt  giga_drain.txt  hydro_pump.txt  hyper_beam.txt  quick_attack.txt  shadow_ball.txt  thunder.txt
Pokemons/Types/: dark.txt  dragon.txt  electric.txt  fire.txt  flying.txt  ghost.txt  grass.txt  normal.txt  poison.txt  water.txt
Saves/: saves.txt  tmp.txt
Textures/: inBattleSpriteGirl.psd
Trainers/: 0.txt  1.txt  2.txt  3.txt  4.txt
